package com.smartfitness.event;

/**
 * IDomainEvent: Required interface for message broker event handling.
 * Marker interface that all domain events must implement.
 */
public interface IDomainEvent { }
