@startuml
' MessageBroker_component.puml (가이드 준수)

' 레이어별 패키지 정의
package "Interface Layer" {

}

package "Business Layer" {
  ' Message Broker는 이벤트를 발행하고 전달하는 역할만 수행
  interface IMessagePublisherService
  interface IMessageSubscriptionService
  interface IDomainEvent
  component MessageBrokerComponent

  ' Provided 인터페이스 (MessageBrokerComponent가 구현하는 인터페이스)
  IMessagePublisherService -( MessageBrokerComponent : <<implement>>
  IMessageSubscriptionService -( MessageBrokerComponent : <<implement>>

  ' Required 인터페이스 (MessageBrokerComponent가 사용하는 인터페이스)
  MessageBrokerComponent ..( IDomainEvent : <<use>>
}

package "System Interface Layer" {
  interface IAuthRepository
  interface IHelperRepository
  interface ISearchRepository
  interface IMonitorRepository
  interface IAccessVectorRepository
  component AuthRepositoryImpl
  component HelperRepositoryImpl
  component SearchRepositoryImpl
  component MonitorRepositoryImpl
  component AccessVectorRepositoryImpl
  database SharedDataSource
  IAuthRepository -- AuthRepositoryImpl
  IHelperRepository -- HelperRepositoryImpl
  ISearchRepository -- SearchRepositoryImpl
  IMonitorRepository -- MonitorRepositoryImpl
  IAccessVectorRepository -- AccessVectorRepositoryImpl
  AuthRepositoryImpl ..( SharedDataSource
  HelperRepositoryImpl ..( SharedDataSource
  SearchRepositoryImpl ..( SharedDataSource
  MonitorRepositoryImpl ..( SharedDataSource
  AccessVectorRepositoryImpl ..( SharedDataSource
}

' 패키지 외부 연결
' 서비스들이 메시지 브로커를 통해 이벤트를 발행/구독하는 관계
' 리포지토리들은 이벤트 구독자로서 동작
AuthRepositoryImpl ..( IMessageSubscriptionService : <<subscribe>>
HelperRepositoryImpl ..( IMessageSubscriptionService : <<subscribe>>
SearchRepositoryImpl ..( IMessageSubscriptionService : <<subscribe>>
MonitorRepositoryImpl ..( IMessageSubscriptionService : <<subscribe>>
AccessVectorRepositoryImpl ..( IMessageSubscriptionService : <<subscribe>>

' 모든 이벤트는 IDomainEvent를 구현
IAuthRepository ..( IDomainEvent : <<use>>
IHelperRepository ..( IDomainEvent : <<use>>
ISearchRepository ..( IDomainEvent : <<use>>
IMonitorRepository ..( IDomainEvent : <<use>>
IAccessVectorRepository ..( IDomainEvent : <<use>>

@enduml